--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <nav>
      <ul>
 
-		<li><a href="https://css-tricks.com/almanac/">ROUTE ONE</a></li>
+		<li><a href="https://prakrichie.github.io/112-ProjectOne/">ROUTE ONE</a></li>
 		<li><a href="#">ROUTE TWO</a></li>
 		<li><a href="#">ROUTE THREE</a></li>
 		
