--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 <nav>
      <ul>
 
-		<li><a href="https://prakrichie.github.io/112-ProjectOne/">ROUTE ONE</a></li>
+		<li><a href="https://prakrichie.github.io/Route-One/">ROUTE ONE</a></li>
 		<li><a href="https://prakrichie.github.io/Route-Two/">ROUTE TWO</a></li>
-		<li><a href="#">ROUTE THREE</a></li>
+		<li><a href="https://prakrichie.github.io/Route-Three/">ROUTE THREE</a></li>
 		
 
 
